--- a/.github/workflows/b2.yml
+++ b/.github/workflows/b2.yml
@@ -1,61 +1,31 @@
-name: Build b2
+name: CI Linux (i686)
 
 on:
   push:
-    branches:
-      - master
-      - wip/master
+  pull_request:
+  repository_dispatch:
+    types: [run_build]
+
+permissions:
+  contents: read
+
+env:
+  ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
 
 jobs:
-  build-linux:
+  build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - run: make github_ci_ubuntu
+    container:
+      image: git.libretro.com:5050/libretro-infrastructure/libretro-build-i386-ubuntu:xenial-gcc9
+      options: --user root
 
-  build-windows:
-    runs-on: windows-2019
     steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - run: make github_ci_windows
-        env:
-          GH_TOKEN: ${{ github.token }}
+      - name: Check Out Repo
+        uses: actions/checkout@v3
 
-  build-macos-x64:
-    runs-on: macos-13
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - run: make github_ci_macos_homebrew
-      - run: make github_ci_macos_homebrew_ffmpeg
-      - run: make github_ci_macos_x64
-        env:
-          GH_TOKEN: ${{ github.token }}
-          
-  build-older-macos-x64:
-    runs-on: macos-13
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - run: make github_ci_macos_homebrew
-      - run: make github_ci_older_macos_x64
-        env:
-          GH_TOKEN: ${{ github.token }}
-          
-  build-macos-arm:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - run: make github_ci_macos_homebrew
-      - run: make github_ci_macos_homebrew_ffmpeg
-      - run: make github_ci_macos_arm
-        env:
-          GH_TOKEN: ${{ github.token }}
+      - name: Compile b2-libretro
+        run: |
+          cd src/libretro
+          make -j$(getconf _NPROCESSORS_ONLN) clean
+          make -j$(getconf _NPROCESSORS_ONLN)
+
