--- a/.github/workflows/b2.yml
+++ b/.github/workflows/b2.yml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
       - name: Check Out Repo
-        uses: actions/checkout@v3
+        uses: taiki-e/checkout-action@v1
 
       - name: Compile b2-libretro
         run: |
