--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,12 +31,12 @@ include:
   #  file: '/linux-i686.yml'
 
   # MacOS 64-bit
-  #- project: 'libretro-infrastructure/ci-templates'
-  #  file: '/osx-x64.yml'
+  - project: 'libretro-infrastructure/ci-templates'
+    file: '/osx-x64.yml'
 
   # MacOS ARM 64-bit
-  #- project: 'libretro-infrastructure/ci-templates'
-  #  file: '/osx-arm64.yml'
+  - project: 'libretro-infrastructure/ci-templates'
+    file: '/osx-arm64.yml'
 
   ################################## CELLULAR ################################
   # Android
@@ -44,8 +44,8 @@ include:
   #  file: '/android-jni.yml'
 
   # iOS
-  #- project: 'libretro-infrastructure/ci-templates'
-  #  file: '/ios-arm64.yml'
+  - project: 'libretro-infrastructure/ci-templates'
+    file: '/ios-arm64.yml'
 
   # iOS (armv7)
   #- project: 'libretro-infrastructure/ci-templates'
@@ -77,8 +77,8 @@ include:
   #  file: '/libnx-static.yml'
 
   # tvOS (AppleTV)
-  #- project: 'libretro-infrastructure/ci-templates'
-  #  file: '/tvos-arm64.yml'
+  - project: 'libretro-infrastructure/ci-templates'
+    file: '/tvos-arm64.yml'
 
   # OpenDingux
   #- project: 'libretro-infrastructure/ci-templates'
@@ -129,16 +129,16 @@ libretro-build-linux-x64:
 #    - .core-defs
 
 # MacOS 64-bit
-#libretro-build-osx-x64:
-#  extends:
-#    - .libretro-osx-x64-make-default
-#    - .core-defs
+libretro-build-osx-x64:
+  extends:
+    - .libretro-osx-x64-make-default
+    - .core-defs
 
 # MacOS ARM 64-bit
-#libretro-build-osx-arm64:
-#  extends:
-#    - .libretro-osx-arm64-make-default
-#    - .core-defs
+libretro-build-osx-arm64:
+  extends:
+    - .libretro-osx-arm64-make-default
+    - .core-defs
 
 ################################### CELLULAR #################################
 # Android ARMv7a
@@ -166,10 +166,10 @@ libretro-build-linux-x64:
 #    - .core-defs
 
 # iOS
-#libretro-build-ios-arm64:
-#  extends:
-#    - .libretro-ios-arm64-make-default
-#    - .core-defs
+libretro-build-ios-arm64:
+  extends:
+    - .libretro-ios-arm64-make-default
+    - .core-defs
 
 # iOS (armv7) [iOS 9 and up]
 #libretro-build-ios9:
@@ -178,10 +178,10 @@ libretro-build-linux-x64:
 #    - .core-defs
 
 # tvOS
-#libretro-build-tvos-arm64:
-#  extends:
-#    - .libretro-tvos-arm64-make-default
-#    - .core-defs
+libretro-build-tvos-arm64:
+  extends:
+    - .libretro-tvos-arm64-make-default
+    - .core-defs
 
 ################################### CONSOLES #################################
 # PlayStation Vita
