--- a/src/libretro/Makefile.common
+++ b/src/libretro/Makefile.common
@@ -39,6 +39,7 @@ SOURCES_CPP := \
 	$(CORE_DIR)/beeb/src/TVOutput.cpp \
 	$(CORE_DIR)/beeb/src/type.cpp \
 	$(CORE_DIR)/beeb/src/video.cpp \
+	$(CORE_DIR)/beeb/src/uef.cpp \
 	$(CORE_DIR)/beeb/src/VideoULA.cpp \
 	$(CORE_DIR)/shared/c/log.cpp \
 	$(CORE_DIR)/shared/c/system.cpp \
@@ -52,10 +53,8 @@ SOURCES_CPP := \
 
 SOURCES_C := \
 	$(CORE_DIR)/6502/c/6502.c \
-	$(CORE_DIR)/shared/c/path.c \
-
 	
-ifneq (,$(filter osx ios-arm64 tvos-arm64,$(platform)))
+ifneq (,$(findstring osx,$(platform)))
 SOURCES_CPP += \
 	$(CORE_DIR)/shared/c/system_osx.cpp \
 
