--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,8 +40,8 @@ include:
 
   ################################## CELLULAR ################################
   # Android
-  #- project: 'libretro-infrastructure/ci-templates'
-  #  file: '/android-jni.yml'
+  - project: 'libretro-infrastructure/ci-templates'
+    file: '/android-jni.yml'
 
   # iOS
   - project: 'libretro-infrastructure/ci-templates'
@@ -148,10 +148,10 @@ libretro-build-osx-arm64:
 #    - .core-defs
 
 # Android ARMv8a
-#android-arm64-v8a:
-#  extends:
-#    - .libretro-android-jni-arm64-v8a
-#    - .core-defs
+android-arm64-v8a:
+  extends:
+    - .libretro-android-jni-arm64-v8a
+    - .core-defs
 
 # Android 64-bit x86
 #android-x86_64:
