--- a/src/libretro/Makefile.common
+++ b/src/libretro/Makefile.common
@@ -39,12 +39,14 @@ SOURCES_CPP := \
 	$(CORE_DIR)/beeb/src/TVOutput.cpp \
 	$(CORE_DIR)/beeb/src/type.cpp \
 	$(CORE_DIR)/beeb/src/video.cpp \
+	$(CORE_DIR)/beeb/src/uef.cpp \
 	$(CORE_DIR)/beeb/src/VideoULA.cpp \
 	$(CORE_DIR)/shared/c/log.cpp \
 	$(CORE_DIR)/shared/c/system.cpp \
 	$(CORE_DIR)/shared/c/mutex.cpp \
 	$(CORE_DIR)/shared/c/sha1.cpp \
 	$(CORE_DIR)/shared/c/file_io.cpp \
+	$(CORE_DIR)/shared/c/path.cpp \
 	$(CORE_DIR)/beeb/src/DiscGeometry.cpp \
 	$(CORE_DIR)/beeb/src/DirectDiscImage.cpp \
 	$(CORE_DIR)/b2/filters.cpp \
@@ -52,9 +54,7 @@ SOURCES_CPP := \
 
 SOURCES_C := \
 	$(CORE_DIR)/6502/c/6502.c \
-	$(CORE_DIR)/shared/c/path.c \
 
-	
 ifneq (,$(filter osx ios-arm64 tvos-arm64,$(platform)))
 SOURCES_CPP += \
 	$(CORE_DIR)/shared/c/system_osx.cpp \
