UEF reading WIP

--- a/src/libretro/Makefile
+++ b/src/libretro/Makefile
@@ -1,6 +1,7 @@
 TARGET_NAME := b2
 
 B2_LIBRETRO_CORE := 1
+BBCMICRO_DEBUGGER := 1
 STATIC_LINKING := 0
 DEBUG   = 0
 LIBS    :=
@@ -507,7 +508,7 @@ else
     LDFLAGS += -s
 endif
 
-DEFINES := -DB2_LIBRETRO_CORE -DBUILD_TYPE_Final -DBBCMICRO_TRACE $(PLATFORM_DEFINES)
+DEFINES := -DB2_LIBRETRO_CORE -DBUILD_TYPE_Final -DBBCMICRO_TRACE -DBBCMICRO_DEBUGGER $(PLATFORM_DEFINES)
 
 CFLAGS += $(DEFINES)
 CXXFLAGS += $(DEFINES) -std=c++17
